--- a/CustomXamarin/CustomXamarin/CustomXamarin/Views/HomePage.xaml
+++ b/CustomXamarin/CustomXamarin/CustomXamarin/Views/HomePage.xaml
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:views="clr-namespace:CustomXamarin.Views"
              x:Class="CustomXamarin.Views.HomePage">
-    <ContentPage.Content>
-        <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-            <Button  Text="Get orientation" Command="{Binding GetOrientantion}" />
-        </StackLayout>
-    </ContentPage.Content>
-</ContentPage>
+    <TabbedPage.Children>
+        <views:EffectPage/>
+        <views:CustomRenderPage/>
+        <views:ServicePage/>
+    </TabbedPage.Children>
+</TabbedPage>
