--- a/CustomXamarin/CustomXamarin/CustomXamarin/Views/HomePage.xaml
+++ b/CustomXamarin/CustomXamarin/CustomXamarin/Views/HomePage.xaml
@@ -2,7 +2,15 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:views="clr-namespace:CustomXamarin.Views"
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
+             xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
+             android:TabbedPage.ToolbarPlacement="Bottom"
+             ios:Page.UseSafeArea="true"
              x:Class="CustomXamarin.Views.HomePage">
+    <!--Platform specifics: 
+        android:TabbedPage.ToolbarPlacement="Bottom" 
+        ios:Page.UseSafeArea="true"
+--> 
     <TabbedPage.Children>
         <views:EffectPage/>
         <views:CustomRenderPage/>
